--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
 
     - name: Hello world action step
       id: hello
-      uses: sburris-rally/actions-secrets-testing@master
+      uses: sburris-rally/actions-secrets-testing@main
       with:
         who-to-greet: 'Sburris'
 
