--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
   hello_world_job:
     runs-on: ubuntu-latest
     name: A job to say hello
-    environment: dev
+    environment: uat
     steps:
     - name: Get source code
       uses: actions/checkout@v1
