--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,20 +3,41 @@ name: Testing
 on: [push]
 
 jobs:
-  hello_world_job:
+  dev_secrets:
     runs-on: ubuntu-latest
-    name: A job to say hello
-    environment: uat
+    name: extracting dev secrets
+    environment: dev
     steps:
-    - name: Get source code
-      uses: actions/checkout@v1
-
     - name: Hello world action step
       id: hello
       uses: sburris-rally/actions-secrets-testing@main
       with:
-        who_to_greet: 'Sburris'
         first_secret: ${{ secrets.FIRST_SECRET }}
+        second_secret: ${{ secrets.SECOND_SECRET }}
+        third_secret: ${{ secrets.THIRD_SECRET }}
 
-    - name: Get the output time
-      run: echo "The time was ${{ steps.hello.outputs.time }}"
+  uat_secrets:
+    runs-on: ubuntu-latest
+    name: extracting uat secrets
+    environment: uat
+    steps:
+    - name: Hello world action step
+      id: hello
+      uses: sburris-rally/actions-secrets-testing@main
+      with:
+        first_secret: ${{ secrets.FIRST_SECRET }}
+        second_secret: ${{ secrets.SECOND_SECRET }}
+        third_secret: ${{ secrets.THIRD_SECRET }}
+
+  prod_secrets:
+    runs-on: ubuntu-latest
+    name: extracting prod secrets
+    environment: prod
+    steps:
+    - name: Hello world action step
+      id: hello
+      uses: sburris-rally/actions-secrets-testing@main
+      with:
+        first_secret: ${{ secrets.FIRST_SECRET }}
+        second_secret: ${{ secrets.SECOND_SECRET }}
+        third_secret: ${{ secrets.THIRD_SECRET }}
